array.island.Island.scala.error
Erreur de compilation :
Island:8: error: not found: type compteur
        if (num[compteur]>num[compteurs]){aux=false}
                ^Island:8: error: value num of type Array[Int] does not take type parameters.
        if (num[compteur]>num[compteurs]){aux=false}
               ^Island:8: error: not found: type compteurs
        if (num[compteur]>num[compteurs]){aux=false}
                              ^Island:8: error: value num of type Array[Int] does not take type parameters.
        if (num[compteur]>num[compteurs]){aux=false}
                             ^Island:8: error: reassignment to val
        if (num[compteur]>num[compteurs]){aux=false}
                                             ^Island:9: error: not found: type compteur
        if ((num[compteur]==num[compteurs]) && aux) {res = res + 1}}
                 ^Island:9: error: value num of type Array[Int] does not take type parameters.
        if ((num[compteur]==num[compteurs]) && aux) {res = res + 1}}
                ^Island:9: error: not found: type compteurs
        if ((num[compteur]==num[compteurs]) && aux) {res = res + 1}}
                                ^Island:9: error: value num of type Array[Int] does not take type parameters.
        if ((num[compteur]==num[compteurs]) && aux) {res = res + 1}}
                               ^Island:9: error: reassignment to val
        if ((num[compteur]==num[compteurs]) && aux) {res = res + 1}}
                                                         ^Island:4: error: type mismatch;
 found   : Unit
 required: Int
  for (compteur <- 1 to num.length) {
                ^