array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  val res : Int = 0
  for (compteur <- 1 to num.length) {
    val aux : Boolean = true
    for (compteurs <-1 to num.length) {
      if (compteurs>compteur){
        if (num[compteur]>num[compteurs]){aux=false}
        if ((num[compteur]==num[compteurs]) && aux) {res = res + 1}}
    }
  }
}